# Agentic-SDK

./: .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  README.md  pyproject.toml  pytest.ini  requirements.txt
config/: .env.example  README.md  development.yaml  production.yaml  testing.yaml
docs/: GETTING_STARTED.md  REGISTRY_ARCHITECTURE.md  UNIFIED_MONITORING_MIGRATION.md  azure_integration.md
energyai_sdk/: __init__.py  agents.py  application.py  config.py  core.py  decorators.py  exceptions.py  kernel_factory.py  middleware.py  observability.py
energyai_sdk/clients/: __init__.py  context_store_client.py  langfuse_client.py  monitoring.py  registry_client.py
examples/: azure_integration_example.py  basic_agent.py  declarative_agents.py  decorator_concept_demo.py  energy_skills.py  energy_tools.py  example_usage.py  langfuse_monitoring_example.py  master_agent.py  production_azure_platform.py  registry_based_agents.py  simple_consolidated_demo.py  stateful_application_example.py  stateful_conversation_example.py  unified_monitoring_example.py  unified_observability_example.py
scripts/: deploy.py  run_tests.py  setup_dev.py
tests/: conftest.py  test_agents_merged.py  test_application.py  test_application_azure.py  test_application_context_integration.py  test_azure_integration.py  test_config.py  test_context_store_client.py  test_core.py  test_langfuse_integration.py  test_middleware.py  test_unified_monitoring_integration.py
tests/fixtures/: mock_responses.py
tests/integration/: test_end_to_end.py
